# google-documents

./: pyproject.toml
google_documents/entity_managers/: file.py
