[tool.poetry]
name = "google-documents"
version = "0.1.0"
description = ""
authors = ["Ken Morishita <mokemokechicken@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "1.7.4"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
